--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -39,7 +39,7 @@ eksfiler=$(filter-out eksempler/CVS,$(alleeksfiles))
 imagesize=$(wildcard /usr/lib/perl5/site_perl/5.005/Image/Size.pm)
 
 # Har vi Plucker inde
-$plucker = $(wildcard /usr/bin/plucker-build)
+plucker = $(wildcard /usr/bin/plucker-build)
 
 # Har vi tidy installeret?
 tidy=$(wildcard /usr/bin/tidy)
