Ups sgmlfiles var ikke defineret

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -29,6 +29,9 @@ badsgmlfiles=dato.sgml magic.sgml stikord.sgml
 # Her er  en liste af alle sgml
 allesgmlfiles=$(wildcard *.sgml)
 
+# Her er en liste af sgml-filer der skal checkes
+sgmlfiler=$(filter-out $(badsgmlfiles),$(allesgmlfiles))
+
 # Her er  en liste af alle eksempler
 alleeksfiles=$(wildcard eksempler/*)
 
