--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -58,7 +58,7 @@ ImageMagickconvert = $(firstword $(ImageMagickconvertf))
 # her er det der skal laves
 all:	starter gemversion html pspdf palmpilot sgml eksempelbackup exit
 
-starter:
+starter: gemversion
 	@echo "---------------------------------------------"
 	@echo "Starter oversættelser af " $(targetshortname)
 	@echo "---------------------------------------------"
@@ -146,9 +146,9 @@ bog/index.html: $(sgmlfiler)
 	make reparerhtml 
 	make pakhtml
 
-html: bog/index.html
+html: gemversion bog/index.html
 
-pspdf:	$(targetname)-$(version)_pdf.zip
+pspdf:	gemversion $(targetname)-$(version)_pdf.zip
 
 $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	make statusfiler
