--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -156,7 +156,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	rm -rf bogps bogpdf stikord.sgml tempdir magic.sgml
 	mkdir tempdir
 	echo '<!ENTITY magic "eps">' > magic.sgml
-	perl ./collateindex.pl  -t Stikordsregister -g -i stikord -N -o stikord.sgml
+	perl ./collateindex.pl  -s Symboler -t Stikordsregister -g -i stikord -N -o stikord.sgml
 	cp *.sgml tempdir
 	(cd tempdir; jade -t sgml -ihtml -d $(cygnus)\#print -V html-index -V nochunks bog.sgml > ged.html)
 	perl ./collateindex.pl -s Symboler -t Stikordsregister  -g -i stikord  -o stikord.sgml tempdir/HTML.index
