--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -179,8 +179,11 @@ pspdf:	gemversion $(targetname)-$(version)_pdf.zip
 
 $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	make statusfiler
-	@echo "Target is" $(targetname).ps.gz
 	rm -rf bogps bogpdf stikord.sgml tempdir magic.sgml
+	rm -f $(targetname)-*.pdf*    
+	rm -f $(targetname)-*_pdf.zip
+	rm -f $(targetname)-*.ps.gz              
+	rm -f $(targetname)-*.ps              
 	mkdir tempdir
 
 	echo '<!ENTITY magic "eps">' > magic.sgml
@@ -216,8 +219,8 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	@echo "Done PS (pspdf)"
 	@echo ""
 
-	rm -f $(targetname)-*.ps.gz
 	rm -f $(targetname)-$(version).pdf
+	rm -f $(targetname)-*.ps              
 	rm -rf bogps bogpdf
 
 
