--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -204,7 +204,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	(cd bogpdf; jade -t tex -d $(cygnus)\#print -o bogpre.tex bog.sgml )
 #	(cd bogpdf; cat bogpre.tex | sed 's#--#-{}-{}#g' > bog.tex)
 	(cd bogpdf; cat bogpre.tex > bog.tex)
-	(cd bogpdf; pdfjadetex bog;pdfjadetex bog;pdfjadetex bog )
+	(cd bogpdf; pdfjadetex bog;pdfjadetex bog;pdfjadetex bog ) > /dev/null
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
 	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
