--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -201,10 +201,11 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	rm -f $(targetname)-*.pdf
 	cp images/*.png bogpdf
 	(cd bogpdf; perl ../../httpsplit.pl *.sgml)
-	(cd bogpdf; jade -t tex -d $(cygnus)\#print -o bogpre.tex bog.sgml )
+#	(cd bogpdf; jade -t tex -d $(cygnus)\#print -o bogpre.tex bog.sgml )
 #	(cd bogpdf; cat bogpre.tex | sed 's#--#-{}-{}#g' > bog.tex)
-	(cd bogpdf; cat bogpre.tex > bog.tex)
-	(cd bogpdf; pdfjadetex bog;pdfjadetex bog;pdfjadetex bog ) > /dev/null
+#	(cd bogpdf; cat bogpre.tex > bog.tex)
+#	(cd bogpdf; pdfjadetex bog;pdfjadetex bog;pdfjadetex bog ) > /dev/null
+	(cd bogpdf; db2pdf bog.sgml )
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
 	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
