eksempler med i zip-HTML udgaven

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -131,7 +131,7 @@ endif
 pakhtml:
 	mv bog $(targetshortname)
 	tar cvzf $(targetname)-$(version).html.tgz $(targetshortname) eksempler
-	zip $(targetname)-$(version)_html.zip $(targetshortname)/* eksempler
+	zip $(targetname)-$(version)_html.zip -r $(targetshortname) eksempler
 	tar cvzf $(targetname)-$(version).html-ub.tgz $(targetshortname)/*.html $(targetshortname)/*.css eksempler
 	mv $(targetshortname) bog 
 	mv images $(targetshortname)_images
