--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -141,6 +141,7 @@ pakhtml:
 	@echo ""
 
 bog/index.html: $(sgmlfiler)
+	make clean
 	make statusfiler
 	make htmlfiler 
 	make reparerhtml 
@@ -252,4 +253,4 @@ endif
 
 
 clean:
-	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tgz $(targetname)*.pdf* $(targetname)*.ps.gz $(targetname)*.zip $(targetname)-*.palm.tgz $(targetname)-*.png.tgz $(targetname)-*.sgml.tgz $(targetname)-*.html-ub.tgz palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tgz
+	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tgz $(targetname)*.pdf*$(targetname)*.zip $(targetname)-*.palm.tgz $(targetname)-*.png.tgz $(targetname)-*.sgml.tgz $(targetname)-*.html-ub.tgz palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tgz
