Ups - pto skal rydde lidt mere op så gamle filer slettes

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -253,4 +253,4 @@ endif
 
 
 clean:
-	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tgz $(targetname)*.pdf*$(targetname)*.zip $(targetname)-*.palm.tgz $(targetname)-*.png.tgz $(targetname)-*.sgml.tgz $(targetname)-*.html-ub.tgz palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tgz
+	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tgz $(targetname)*zip $(targetname)*.pdf*$(targetname)*.zip $(targetname)-*.palm.tgz $(targetname)-*.png.tgz $(targetname)-*.sgml.tgz $(targetname)-*.html-ub.tgz palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tgz
