Support for Office-bogen

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -121,7 +121,7 @@ else
 	echo "Du bør installere Perl-modulet Image:Size"
 endif
 ifneq   ("$(tidy)","")
-	(cd bog;tidy -f err.txt -imu *html;rm -f err.txt)
+	(cd bog;tidy -latin1 -f err.txt -imu *html;rm -f err.txt)
 else
 	echo "Du bør installere tidy"
 endif
