Erstattet "make" med "$(MAKE)", så bøgerne også kan bygges på systemer, hvor GNU Make for eksempel hedder "gmake".

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -76,7 +76,7 @@ palmpilot: $(targetname)-$(version).palm.tgz
 
 $(targetname)-$(version).palm.tgz: $(sgmlfiler)
 ifneq   ("$(plucker)","")
-	make html
+	$(MAKE) html
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
 	cp ../misc/*.prc palm
@@ -141,11 +141,11 @@ pakhtml:
 	@echo ""
 
 bog/index.html: $(sgmlfiler)
-	make clean
-	make statusfiler
-	make htmlfiler 
-	make reparerhtml 
-	make pakhtml
+	$(MAKE) clean
+	$(MAKE) statusfiler
+	$(MAKE) htmlfiler 
+	$(MAKE) reparerhtml 
+	$(MAKE) pakhtml
 
 html: gemversion bog/index.html
 
@@ -181,7 +181,7 @@ enhtmlfil: gemversion bog/enfil.html
 pspdf:	gemversion $(targetname)-$(version)_pdf.zip
 
 $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
-	make statusfiler
+	$(MAKE) statusfiler
 	rm -rf bogps bogpdf stikord.sgml tempdir magic.sgml
 	rm -f $(targetname)-*.pdf*    
 	rm -f $(targetname)-*_pdf.zip
