--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -70,7 +70,7 @@ gemversion:
 sgml: $(targetname)-$(version).sgml.tar.gz
 
 $(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
-	(cd ..;tar cvzf $(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
 
 palmpilot: $(targetname)-$(version).palm.tar.gz
 
