--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -70,7 +70,7 @@ gemversion:
 sgml: $(targetname)-$(version).sgml.tar.gz
 
 $(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz README $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
+	(cd ..;tar cvzf README $(targetshortname)/$(targetname)-$(version).sgml.tar.gz README $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
 
 palmpilot: $(targetname)-$(version).palm.tar.gz
 
@@ -80,7 +80,7 @@ ifneq   ("$(plucker)","")
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
 	cp ../misc/*.prc palm
-	tar cvzf $(targetname)-$(version).palm.tar.gz palm/*.prc palm/*.pdb
+	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).palm.tar.gz $(targetshortname)/palm/*.prc $(targetshortname)/palm/*.pdb)
 else
 	echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
@@ -130,12 +130,12 @@ endif
 
 pakhtml:
 	mv bog $(targetshortname)
-	tar cvzf $(targetname)-$(version).html.tar.gz $(targetshortname) eksempler
-	zip $(targetname)-$(version)_html.zip -r $(targetshortname) eksempler
-	tar cvzf $(targetname)-$(version).html-ub.tar.gz $(targetshortname)/*.html $(targetshortname)/*.css eksempler
+	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).html.tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
+	(cd ..;zip $(targetshortname)/$(targetname)-$(version)_html.zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
+	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).html-ub.tar.gz $(targetshortname)/$(targetshortname)/*.html $(targetshortname)/$(targetshortname)/*.css $(targetshortname)/eksempler)
 	mv $(targetshortname) bog 
 	mv images $(targetshortname)_images
-	tar cvzf $(targetname)-$(version).png.tar.gz $(targetshortname)_images/
+	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).png.tar.gz $(targetshortname)/$(targetshortname)_images/)
 	mv $(targetshortname)_images images 
 	@echo "Done HTML pakning (pakhtml)"
 	@echo ""
@@ -242,7 +242,7 @@ ifneq    ("$(eksfiler)","")
 	rm -f $(targetname)-$(version)_eksempler.tar.gz  
 	touch $(targetname)-$(version)_eksempler.tar
 	cat dato.sgml > eksempler/BACKUPDATO
-	tar cvf  $(targetname)-$(version)_eksempler.tar eksempler/BACKUPDATO
+	(cd ..;tar cvf  $(targetshortname)/$(targetname)-$(version)_eksempler.tar $(targetshortname)/eksempler/BACKUPDATO)
 	rm -f eksempler/BACKUPDATO
 	find eksempler -type f | grep -v "/CVS/" | xargs -l1 -i= -r tar rvf $(targetname)-$(version)_eksempler.tar =
 	gzip -9 $(targetname)-$(version)_eksempler.tar
