Ups pto lavede ændringer til Makefilen lidt for sent om natten

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -70,7 +70,7 @@ gemversion:
 sgml: $(targetname)-$(version).sgml.tar.gz
 
 $(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
-	(cd ..;tar cvzf README $(targetshortname)/$(targetname)-$(version).sgml.tar.gz README $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz README $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl README )
 
 palmpilot: $(targetname)-$(version).palm.tar.gz
 
@@ -80,7 +80,7 @@ ifneq   ("$(plucker)","")
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
 	cp ../misc/*.prc palm
-	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).palm.tar.gz $(targetshortname)/palm/*.prc $(targetshortname)/palm/*.pdb)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).palm.tar.gz $(targetshortname)/palm/*.prc $(targetshortname)/palm/*.pdb README  )
 else
 	echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
@@ -130,12 +130,12 @@ endif
 
 pakhtml:
 	mv bog $(targetshortname)
-	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).html.tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).html.tar.gz $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler README  )
 	(cd ..;zip $(targetshortname)/$(targetname)-$(version)_html.zip -r $(targetshortname)/$(targetshortname) $(targetshortname)/eksempler)
-	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).html-ub.tar.gz $(targetshortname)/$(targetshortname)/*.html $(targetshortname)/$(targetshortname)/*.css $(targetshortname)/eksempler)
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).html-ub.tar.gz $(targetshortname)/$(targetshortname)/*.html $(targetshortname)/$(targetshortname)/*.css $(targetshortname)/eksempler README  )
 	mv $(targetshortname) bog 
 	mv images $(targetshortname)_images
-	(cd ..;tar cvzf README  $(targetshortname)/$(targetname)-$(version).png.tar.gz $(targetshortname)/$(targetshortname)_images/)
+	(cd ..;tar cvzf  $(targetshortname)/$(targetname)-$(version).png.tar.gz $(targetshortname)/$(targetshortname)_images/ README )
 	mv $(targetshortname)_images images 
 	@echo "Done HTML pakning (pakhtml)"
 	@echo ""
