--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -214,17 +214,17 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	@echo "Done PDF (pspdf)"
 	@echo ""
 
-#	echo '<!ENTITY magic "eps">' > magic.sgml
-#	mkdir bogps
-#	find images/*.png | sed 's/.png//' | sed 's=images/==' | xargs -i% $(ImageMagickconvert) -antialias images/%.png eps2:bogps/%.eps
-#	echo '<!ENTITY magic "eps">' > magic.sgml
-#	cp *.sgml bogps
-#	(cd bogps; perl ../../httpsplit.pl *.sgml)
-#	(cd bogps; db2ps bog.sgml )
-#	mv bogps/bog.ps $(targetname)-$(version).ps
-#	gzip -9 $(targetname)-$(version).ps
-#	@echo "Done PS (pspdf)"
-#	@echo ""
+	echo '<!ENTITY magic "eps">' > magic.sgml
+	mkdir bogps
+	find images/*.png | sed 's/.png//' | sed 's=images/==' | xargs -i% $(ImageMagickconvert) -antialias images/%.png eps2:bogps/%.eps
+	echo '<!ENTITY magic "eps">' > magic.sgml
+	cp *.sgml bogps
+	(cd bogps; perl ../../httpsplit.pl *.sgml)
+	(cd bogps; db2ps bog.sgml )
+	mv bogps/bog.ps $(targetname)-$(version).ps
+	gzip -9 $(targetname)-$(version).ps
+	@echo "Done PS (pspdf)"
+	@echo ""
 
 	rm -f $(targetname)-$(version).pdf
 #	rm -f $(targetname)-*.ps              
