Understøtter ogsaa sgml-zip

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -70,7 +70,8 @@ gemversion:
 sgml: $(targetname)-$(version).sgml.tar.gz
 
 $(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz README $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl README )
+	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz README $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
+	(cd ..;zip $(targetshortname)/$(targetname)-$(version).sgml.zip -r README $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
 
 palmpilot: $(targetname)-$(version).palm.tar.gz
 
