Ny Make-my-day-file

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -253,4 +253,4 @@ endif
 
 
 clean:
-	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz $(targetname)*.zip $(targetname)-*.palm.tar.gz $(targetname)-*.png.tar.gz $(targetname)-*.sgml.tar.gz $(targetname)-*.html-ub.tar.gz palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz
+	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz $(targetname)*.zip $(targetname)-*.palm.tar.gz $(targetname)-*.png.tar.gz $(targetname)-*.sgml.tar.gz $(targetname)-*.tar.gz palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz
