exit sletter tempdir

--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -94,6 +94,7 @@ statusfiler:
 	@echo Checker $(sgmlfiler)
 
 exit:
+	rm -rf tempdir
 	@echo "---------------------------------------------"
 	@echo slut på $(targetshortname)
 	@echo "---------------------------------------------"
