--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -73,15 +73,15 @@ $(targetname)-$(version).sgml.tar.gz: $(sgmlfiler)
 	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).sgml.tar.gz $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl)
 	(cd ..;zip $(targetshortname)/$(targetname)-$(version).sgml.zip -r $(targetshortname)/*.sgml $(targetshortname)/Makefile $(targetshortname)/collateindex.pl )
 
-palmpilot: $(targetname)-$(version).palm.tar.gz
+palmpilot: $(targetname)-$(version).palm.zip
 
-$(targetname)-$(version).palm.tar.gz: $(sgmlfiler)
+$(targetname)-$(version).palm.zip: $(sgmlfiler)
 ifneq   ("$(plucker)","")
 	$(MAKE) html
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
 	cp ../misc/*.prc palm
-	(cd ..;tar cvzf $(targetshortname)/$(targetname)-$(version).palm.tar.gz $(targetshortname)/palm/*.prc $(targetshortname)/palm/*.pdb  )
+	(zip $(targetname)-$(version).palm.zip palm/*.prc palm/*.pdb  )
 else
 	echo "Du bør installere plucker for at kunne lave palm-udgaven"
 endif
