--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -77,6 +77,7 @@ palmpilot: $(targetname)-$(version).palm.zip
 
 $(targetname)-$(version).palm.zip: $(sgmlfiler)
 ifneq   ("$(plucker)","")
+	rm -f $(targetname)-$(version).palm.zip $(targetname)-$(version).palm.tar.gz
 	$(MAKE) html
 	rm -f palm/*.prc palm/*.pdb
 	(cd palm;plucker-build -v -P . -f $(targetname))
@@ -254,4 +255,4 @@ endif
 
 
 clean:
-	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)-*.html.tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz $(targetname)*.zip $(targetname)-*.palm.tar.gz $(targetname)-*.png.tar.gz $(targetname)-*.sgml.tar.gz $(targetname)-*.tar.gz palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz
+	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname).tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz  palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz
