--- a/Makefile.subdir
+++ b/Makefile.subdir
@@ -255,4 +255,4 @@ endif
 
 
 clean:
-	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname).tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz  palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz
+	rm -rf dato.sgml magic.sgml DBTOHTML_OUTPUT_DIR* bog.junk bog stikord.sgml tempdir bogps bogpdf $(targetname)*.tar.gz $(targetname)*zip $(targetname)*.pdf $(targetname)*.ps  $(targetname)*.ps.gz  palm/*.prc palm/*.pdb sideantal.txt $(targetname)-*_eksempler.tar.gz
