må ikke gemme problemerne

--- a/alle/Makefile
+++ b/alle/Makefile
@@ -157,7 +157,7 @@ $(targetname)-$(version)_pdf.zip: $(sgmlfiler)
 	cp *.sgml bogpdf
 	rm -f $(targetname)-*.pdf
 	cp images/*.png bogpdf
-	(cd bogpdf; db2pdf bog.sgml > /dev/null)
+	(cd bogpdf; db2pdf bog.sgml )
 	mv bogpdf/bog.pdf $(targetname)-$(version).pdf
 	pdfinfo $(targetname)-$(version).pdf | grep Pages: | cut -d':' -f2 > sideantal.txt
 	zip $(targetname)-$(version)_pdf.zip $(targetname)-$(version).pdf
